chore: Update pom.xml - add config for surefire-plugin